# windspot-skill

./: README.md  SKILL.md  pyproject.toml
windspot/: __init__.py  auth.py  browser.py  cli.py  models.py  page_scripts.js  scraper.py  tides.py
